install-meta (0.0.43) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Horst Tritremmel ]
  * compiler warning shut up
  * category text is now bold
  * bugfix for bold category text 

 -- Horst Tritremmel <hjt@sidux.com>  Tue,  6 Mar 2007 08:44:34 +0100

install-meta (0.0.42) unstable; urgency=low

  * add categories

 -- Horst Tritremmel <hjt@sidux.com>  Sat,  3 Mar 2007 18:18:47 +0100

install-meta (0.0.41) unstable; urgency=low

  * add meta-package info 

 -- Horst Tritremmel <hjt@sidux.com>  Thu,  1 Mar 2007 22:07:31 +0100

install-meta (0.0.39) unstable; urgency=low

  [ Horst Tritremmel ]
  * made *.bm files non executable

  [ Stefan Lippers-Hollmann ]
  * strip #!/bin/bash from *.bm files to shut up lintian.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 22 Feb 2007 15:52:41 +0100

install-meta (0.0.38) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 21 Feb 2007 02:21:35 +0100

install-meta (0.0.37) unstable; urgency=low

  * add fvwm-crystal.bm
  * umount message fix
  * added postprocess to fvwm and fluxbox so the get the sidux wallpaper as
    default.

 -- Joaquim Boura <x-un-i@sidux.com>  Wed, 21 Feb 2007 00:17:38 +0100

install-meta (0.0.36) unstable; urgency=low

  * rm : in Russian modules 

 -- Horst Tritremmel <peter_weber69@gmx.at>  Tue, 20 Feb 2007 10:20:09 +0100

install-meta (0.0.35) unstable; urgency=low

  * add Russian modules
  * remove Generic Server

 -- Horst Tritremmel <peter_weber69@gmx.at>  Tue, 20 Feb 2007 10:14:37 +0100

install-meta (0.0.34) unstable; urgency=low

  * reverted to non-wdm solution, removing kde kdm and installing wdm needs 
    more testing

 -- Chris Hildebrandt <webmaster@sidux.com>  Tue, 20 Feb 2007 09:36:00 +0100

install-meta (0.0.33) unstable; urgency=low

  * fixed syntax error.

 -- Chris Hildebrandt <webmaster@sidux.com>  Mon, 19 Feb 2007 22:00:08 +0100

install-meta (0.0.32) unstable; urgency=low
